--- a/Mission06_Tuinei/Views/Home/GetToKnowJoel.cshtml
+++ b/Mission06_Tuinei/Views/Home/GetToKnowJoel.cshtml
@@ -10,3 +10,8 @@
     <li><a href="https://baconsale.com/">See Joe in Baconsale!</a></li>
 </ul>
 <a href="https://baconsale.com/"><img src="~/img/baconsalekate.jpg" height="200" width="200"alt="Bacon Sale Image"/></a>
+<br />
+<p>
+    Joel Hilton. Comedian. Performer. Brother of Professor Hilton.
+</p>
+<img src="~/img/JoelHiltonHeadshot.jpg" height="400" width="300"alt="Joel, what a man." />
