--- a/Mission06_Tuinei/Views/Home/Index.cshtml
+++ b/Mission06_Tuinei/Views/Home/Index.cshtml
@@ -1,13 +1,17 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
-
+<!-- home page with navigation bar -->
 <div class="text-center">
     <h1 class="display-4">The Joel Hilton Film Collection</h1>
     <p>We love Joel, and Joel loves movies.</p>
 
 
 </div>
+<p>
+    Joel Hilton. Comedian. Performer. Brother of Professor Hilton.
+</p>
+<img src="~/img/JoelHiltonHeadshot.jpg" height="400" width="300" alt="Joel, what a man." />
 <div>
     <a asp-controller="Home" asp-action="GetToKnowJoel">Get to Know Joel</a>
 </div>
