--- a/Mission06_Tuinei/Views/Home/Confirmation.cshtml
+++ b/Mission06_Tuinei/Views/Home/Confirmation.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @model Application
-
-<h1>Your reguest for @Model.Title was processed!</h1>
+<!--  Page to tell the user that their response was recorded!-->
+<h1>Your request for @Model.Title was processed!</h1>
 <p>Thanks for submitting a new movie, Joel will be grateful.</p>
 
