--- a/Mission06_Tuinei/Views/Home/GetToKnowJoel.cshtml
+++ b/Mission06_Tuinei/Views/Home/GetToKnowJoel.cshtml
@@ -1,17 +1,9 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
-<h1>Want to see Joe perform?</h1>
+﻿<!-- Include hyperlinks for places where Joel performs-->
+<h1>Want to see Joel perform?</h1>
 <Br />
 <ul>
     <li><a href="https://www.qwcomedy.com/">Come to Quick Wits Comedy!</a></li>
-    <li><a href="https://baconsale.com/">See Joe in Baconsale!</a></li>
+    <li><a href="https://baconsale.com/">See Joel in Baconsale!</a></li>
 </ul>
 <a href="https://baconsale.com/"><img src="~/img/baconsalekate.jpg" height="200" width="200"alt="Bacon Sale Image"/></a>
 <br />
-<p>
-    Joel Hilton. Comedian. Performer. Brother of Professor Hilton.
-</p>
-<img src="~/img/JoelHiltonHeadshot.jpg" height="400" width="300"alt="Joel, what a man." />
