--- a/Mission06_Tuinei/Views/Home/Index.cshtml
+++ b/Mission06_Tuinei/Views/Home/Index.cshtml
@@ -16,3 +16,6 @@
     <a asp-controller="Home" asp-action="GetToKnowJoel">Get to Know Joel</a>
 </div>
 <a asp-controller="Home" asp-action="NewMovieForm">Submit a New Movie</a>
+<div>
+    <a asp-controller="Home" asp-action="MovieSubmissions">View Movie Submissions</a>
+</div>
