--- a/Mission06_Tuinei/Views/Home/Delete.cshtml
+++ b/Mission06_Tuinei/Views/Home/Delete.cshtml
@@ -3,13 +3,13 @@
 *@
 @{
 }
-@model Mission06_Tuinei.Models.Application
+@model Mission06_Tuinei.Models.Movie
 
 <div class="container mt-4">
     <h2>Delete Movie</h2>
     <p>Are you sure you want to delete this movie?</p>
     <form asp-action="DeleteConfirmed">
-        <input type="hidden" asp-for="Id" />
+        <input type="hidden" asp-for="MovieId" />
         <button type="submit" class="btn btn-danger">Delete</button>
         <a asp-action="MovieSubmissions" class="btn btn-secondary">Cancel</a>
     </form>
